# agentim

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BOT_INTEGRATION.md  CLAUDE.md  CLI_AGENT_GUIDE.md  CLI_GUIDE.md  COMPLETION_REPORT.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  agentim.json.example  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  config.example.json  demo-cli-agent.sh  docker-compose.yml  install.sh  prek.toml  setup.sh  start.sh  test-interactive.sh
.github/workflows/: ci.yml  release.yml
docs/: acp-transport-review.md  codex-app-server-transport-review.md  deployment.md  listener-runtime.md  operations.md  recovery.md  soak-test.md  upgrade-guide.md
examples/: basic.rs  session_management.rs
src/: acp.rs  agent.rs  bot_server.rs  channel.rs  cli.rs  codex.rs  config.rs  error.rs  interactive.rs  lease.rs  lib.rs  listener.rs  main.rs  manager.rs  metrics.rs  persistence.rs  session.rs  store.rs
src/agents/: cli.rs  mod.rs
src/bots/: dingtalk.rs  discord.rs  feishu.rs  line.rs  mod.rs  qq.rs  slack.rs  telegram.rs  wechatwork.rs
src/listeners/: discord_gateway.rs  mod.rs  telegram_polling.rs
tests/: acp_bridge.rs  codex_bridge_surface.rs  codex_webhook_bridge.rs  discord_listener.rs  fault_injection.rs  lease.rs  listener_runtime.rs  review_bridge.rs  soak.rs  store.rs
