[package]
name = "agentim"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
agent-client-protocol-schema = "0.11.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
anyhow = "1"
clap = { version = "=4.5.41", features = ["derive"] }
colored = "2"
prettytable-rs = "0.10"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["limit", "trace"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
base64 = "0.22"
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
